k8s/dev/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: weatherapp-route
  namespace: dev

spec:
  parentRefs:
    - name: weatherapp-gateway

  rules:
    - backendRefs:
        - name: frontend
          port: 80
